--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.10",
     "@vercel/speed-insights": "^1.1.0",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
